renamed all files

--- a/haphotos.html
+++ b/haphotos.html
@@ -5,7 +5,7 @@
             <img src="clz.jpg" alt="this is banner of ntc" width="950" height="200">
             <table cellpadding="50">
                 <tr>
-                    <th colspan="0"><a href="project 2.html">Home</a></th>
+                    <th colspan="0"><a href="index.html">Home</a></th>
                     <th colspan="5"><a href="courses.html">Courses</a></th>
                     <th colspan="5"><a href="COLLEGE members.html">College members</a></th>
                     <th colspan="5"><a href="facilities.html">Facilities</a></th>
