--- a/facilities.html
+++ b/facilities.html
@@ -8,7 +8,7 @@
                 
                 
                     <tr>
-                        <th colspan="0"><a href="project 2.html">Home</a></th>
+                        <th colspan="0"><a href="index.html">Home</a></th>
                         <th colspan="5"><a href="courses.html">Courses</a></th>
                         <th colspan="5"><a href="COLLEGE members.html">College members</a></th>
                         <th colspan="5"><a href="facilities.html">Facilities</a></th>
