--- a/contact us.html
+++ b/contact us.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head> <title>Amit parajuli</title>
+        <link rel="icon" href="logo.ico" type="image/xicon">
 
     </head>
     <body>
