--- a/facilities.html
+++ b/facilities.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html><head> <title>Amit parajuli</title>
+    <link rel="icon" href="logo.ico" type="image/xicon"></head>
     <body>
         <p>
             <center><img src="clz.jpg" alt="this is banner of ntc" width="950" height="200">
