--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Project 2 </title>
+        <title>Amit parajuli</title>
         <link rel="icon" href="logo.ico" type="image/xicon">
      </head>
     
