--- a/COLLEGE members.html
+++ b/COLLEGE members.html
@@ -14,7 +14,7 @@
                     <th colspan="5"><a href="contact us.html">Contact us</a></th>
                 </tr>
             </table>
-        <p>Amit THapa</p>
+        <p>Amit Thapa</p>
         <p>Nrmal magar</p>
         <p>Chunu poudel</p>
         <p>Rajendra shrestha</p>
