--- a/haphotos.html
+++ b/haphotos.html
@@ -16,9 +16,9 @@
     
             </table>
         </center>
-        <img src="../images/ha.jpg" alt="this is computer student " width="300" height="270">
-        <img src="../images/ha2.JPG" alt="this is computer student " width="300" height="270">
-        <img src="../images/ha3.JPG" alt="this is computer student " width="300" height="270">
-        <img src="../images/ha4.JPG" alt="this is computer student " width="300" height="270">
+        <img src="images/ha.jpg" alt="this is computer student " width="300" height="270">
+        <img src="images/ha2.JPG" alt="this is computer student " width="300" height="270">
+        <img src="images/ha3.JPG" alt="this is computer student " width="300" height="270">
+        <img src="images/ha4.JPG" alt="this is computer student " width="300" height="270">
     </body>
 </html>
