--- a/civilphoto.html
+++ b/civilphoto.html
@@ -21,10 +21,10 @@
             </table>
         </center>
 
-        <img src="../images/civil.jpg" alt="this is computer student " width="300" height="200">
-        <img src="../images/civil3.JPG" alt="this is computer student " width="300" height="200">
-        <img src="../images/dce1.JPG" alt="this is computer student " width="300" height="200">
-        <img src="../images/dce2.JPG" alt="this is computer student " width="300" height="200">
+        <img src="images/civil.jpg" alt="this is computer student " width="300" height="200">
+        <img src="images/civil3.JPG" alt="this is computer student " width="300" height="200">
+        <img src="images/dce1.JPG" alt="this is computer student " width="300" height="200">
+        <img src="images/dce2.JPG" alt="this is computer student " width="300" height="200">
     
     </body>
 </html>
