--- a/images.html
+++ b/images.html
@@ -16,10 +16,10 @@
             </table>
         </center>
 
-        <img src="../images/computer.jpg" alt="this is computer student " width="300" height="200">
-        <img src="../images/dcom1.JPG" alt="this is computer student " width="300" height="200">
-        <img src="../images/dcom2.JPG" alt="this is computer student " width="300" height="200">
-        <img src="../images/dcom3.JPG" alt="this is computer student " width="300" height="200">
+        <img src="images/computer.jpg" alt="this is computer student " width="300" height="200">
+        <img src="images/dcom1.JPG" alt="this is computer student " width="300" height="200">
+        <img src="images/dcom2.JPG" alt="this is computer student " width="300" height="200">
+        <img src="images/dcom3.JPG" alt="this is computer student " width="300" height="200">
        
     </body>
 </html>
