--- a/labphotos.html
+++ b/labphotos.html
@@ -17,9 +17,9 @@
             </table>
         </center>
            
-        <img src="../images/lab3.JPG" alt="this is computer student " width="300" height="270">
-        <img src="../images/lab/DSC00071.JPG" alt="this is computer student " width="300" height="270">
-        <img src="../images/ha/DSC00048.JPG" alt="this is computer student " width="300" heig27ht="270">
-        <img src="../images/ha/DSC00088.JPG" alt="this is computer student " width="300" height="270">
+        <img src="images/lab3.JPG" alt="this is computer student " width="300" height="270">
+        <img src="images/lab/DSC00071.JPG" alt="this is computer student " width="300" height="270">
+        <img src="images/ha/DSC00048.JPG" alt="this is computer student " width="300" heig27ht="270">
+        <img src="images/ha/DSC00088.JPG" alt="this is computer student " width="300" height="270">
     </body>
 </html>
