--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@
             </table>
         <figure>
 
-           <a href="images.html"> <img src="images/computer1.jpg"  width="600" height="150"> </a> <figcaption><h2>Diploma in Computer Engineering</h2></figcaption>  <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+           <a href="images.html"> <img src="images/computer1.jpg" alt="malik" width="600" height="150"> </a> <figcaption><h2>Diploma in Computer Engineering</h2></figcaption>  <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
             <a href="civilphoto.html"><img src="images/civil1.jpg" alt="amit" width="600" height="150"></a> <figcaption><h2>Diploma in Civil Engineering</h2> </figcaption> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
             <a href="haphotos.html"><img src="images/HA1.jpg" alt="rattu" width="600" height="150"></a> <figcaption><h2>PCL in General Medicine</h2></figcaption> <br> <br> <br> <br> <Br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
             <a href="labphotos.html"><img src="Images/lab1.jpg" alt="nirmal" width="600" height="150"></a> <figcaption><h2>Lab Technician (CMLT)</h2></figcaption> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> </center>
